2semester/docker/hellonode/ingress-tutorial-hello.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: hello-world
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: hello-world
    spec: 
      containers: 
        - image: "gcr.io/secretarias-215411/quickstart-image"
          imagePullPolicy: Always
          name: hello-world-container
          ports: 
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: hello-world-svc
spec: 
  ports: 
     -  port: 8080
        protocol: TCP
        targetPort: 8080
  selector: 
    app: hello-world
  type: NodePort
