2semester/docker/hellonode/very-basic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cm-web
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
