2semester/docker/hellonode/basic-googleingress.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
  #name: basic-googleingress
#spec:
  #backend:
    #serviceName: web
    #servicePort: 8080


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-googleingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
spec:
  backend:
    serviceName: web
    servicePort: 8080
