2semester/docker/hellonode/very-basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: very-basicingress
spec:
  backend:
    serviceName: service
    servicePort: 80
